tests/03-typecheck/06-stack-args.stack
func example (int) (int) in
    +
end

func main () (int) in
    "string" example
end
